--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -3,7 +3,8 @@
     "name": "Chess.com Blocker",
     "version": "1.3",
     "permissions": [
-    "storage"
+    "storage",
+    "webNavigation"
     ],
     "host_permissions": [
     "https://api.chess.com/*",
