--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -1,10 +1,9 @@
 {
     "manifest_version": 3,
     "name": "Chess.com Blocker",
-    "version": "1.4",
+    "version": "1.41",
     "permissions": [
-    "storage",
-    "webNavigation"
+    "storage"
     ],
     "host_permissions": [
     "https://api.chess.com/*",
