Added a mutation observer so you are blocked immediately when you hit the loss limit

--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Chess.com Blocker",
-    "version": "2.1",
+    "version": "1.0",
+    "description": "Prevent binging on chess.com. Blocks chess.com if you lose too many games.",
     "permissions": [
         "storage"
     ],
@@ -10,7 +11,7 @@
         "*://*.chess.com/*"
     ],
     "background": {
-        "scripts": ["background.js"]
+        "service_worker": "background.js"
     },
     "content_scripts": [{
         "matches": ["https://www.chess.com/*"],
@@ -23,9 +24,9 @@
     "options_ui": {
         "page": "options.html"
     },
-    "browser_specific_settings": {
-        "gecko": {
-            "id": "identifier@chessblockerextension.com"
-        }
-    }
+    "icons": {
+        "16": "icons/icon-16.png",
+        "48": "icons/icon-48.png",
+        "128": "icons/icon-128.png"
+    }    
 }
