--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -1,20 +1,24 @@
 {
     "manifest_version": 3,
     "name": "Chess.com Blocker",
-    "version": "1.0",
+    "version": "1.0.0.1",
     "description": "Prevent binging on chess.com. Blocks chess.com if you lose too many games.",
     "permissions": [
         "storage"
     ],
     "host_permissions": [
         "https://api.chess.com/*",
-        "*://*.chess.com/*"
+        "https://*.chess.com/game*",
+        "https://*.chess.com/play/online*"
     ],
     "background": {
         "service_worker": "background.js"
     },
     "content_scripts": [{
-        "matches": ["https://www.chess.com/*"],
+        "matches": [
+            "https://*.chess.com/game*",
+            "https://*.chess.com/play/online*"
+        ],
         "js": ["content.js"]
     }],
     "action": {
@@ -28,5 +32,5 @@
         "16": "icons/icon-16.png",
         "48": "icons/icon-48.png",
         "128": "icons/icon-128.png"
-    }    
+    }
 }
